--- a/styles.css
+++ b/styles.css
@@ -486,7 +486,7 @@ h1 {
     }
 
     .main-box2{
-        width: 200px;
+        width: 50%;
         height: 200px;
         overflow: hidden;
         padding: 0%;
