--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     src: url('/Users/miniduchandrawansa/Desktop/Blog/manrope/manrope-thin.otf');
 }
 
+
 .content-wrapper{
     overflow-x: hidden;
 }
@@ -248,6 +249,7 @@ h1 {
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 0.28em;
 }
 
 /* Show Menu When Active */
@@ -299,6 +301,8 @@ h1 {
 
 .main-box2{
     display: none;
+
+    
 }
 
 .logo2{
@@ -408,8 +412,60 @@ h1 {
   }
 
 /* Responsive Styles for Smaller Screens */
+@media (max-width: 1133px){
 
-@media (min-width:880px){
+    .title{
+        font-size: 0.9em;
+    }
+
+    .menu-items{
+        font-size: 0.24em;
+    }
+
+    .search-bar input{
+        width: 150px;
+    }
+}
+
+@media (max-width: 1087px){
+
+    .menu-items{
+        font-size: 0.2em;
+    }
+    .logo {
+        width: 90%;
+        height: 90%;
+    }
+    .search-bar input{
+        width: 120px;
+    }
+}
+
+@media (max-width: 1039px){
+   
+    .title{
+        font-size: 0.88em;
+    }
+
+    .menu-items{
+        font-size: 0.187em;
+    }
+    .search-bar input{
+        width: 100px;
+    }
+}
+
+@media (max-width: 1015px){
+
+    .menu-items{
+        font-size: 0.18em;
+    }
+    .search-bar input{
+        width: 90px;
+    }
+}
+
+@media (min-width:881px){
     .menu-title-wrapper{
         display: none;
     }
@@ -417,7 +473,16 @@ h1 {
     .hero-background{
         margin-top: 15px;
     }
+
+    .search-bar{
+        margin-right: 2%;
+    }
+
+    .search-bar input{
+        font-size: 0.8em;
+    }
 }
+
 
 @media (max-width: 880px) {
     
@@ -501,6 +566,9 @@ h1 {
 
     .hero-background{
         margin-top: -15px;
+    }
+    .search-bar input{
+        width: 190px;
     }
 }
 
