--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,38 @@ h1 {
     transform: scaleX(-1);
   }
 
+  #back-to-top {
+    position: fixed;
+    bottom: 5%;
+    right: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 900;
+    opacity: 0; /* Start hidden */
+    visibility: hidden; /* Prevent interaction */
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  }
+  
+  #back-to-top.visible {
+    opacity: 1; /* Fully visible */
+    visibility: visible; /* Make it interactable */
+  }
+  
+  #back-to-top img {
+    border-radius: 20px;
+    transform: scale(1);
+    transition: transform 0.3s;
+    opacity: 0.4;
+    width: 100px;
+    height: 100px;
+  }
+
+  #back-to-top img:hover {
+    transform: scale(1.1);
+    opacity: 0.7;
+  }
+
 /* Responsive Styles for Smaller Screens */
 @media (max-width: 1133px){
 
@@ -574,6 +606,11 @@ h1 {
     .search-bar input{
         width: 190px;
     }
+
+    #back-to-top img{
+        width: 70px;
+        height: 70px;
+    }
 }
 
 @media (max-width: 538px){
@@ -698,6 +735,14 @@ h1 {
     .menu-toggle .line{
         width: 80%;
     }
+
+    #back-to-top {
+        display: block !important; /* Ensure visibility */
+        bottom: 10px; /* Adjust positioning for small screens */
+        right: 10px;
+        opacity: 1;
+        visibility: visible;
+      }
 
 /*    .search-bar input::placeholder{
         font-size: 0.6em;
