--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ html,body {
 body {
     background-color: #181C14;
     overflow-x: hidden;
+    padding-bottom: 400px;
 }
 
 
@@ -465,7 +466,6 @@ h1 {
     color: #BDC8B1;
     padding-left: 10px;
     margin-top: 50px;
-    padding-bottom: 100px;
 }
   .blog-content h1{
     font-size: 3em;
@@ -491,6 +491,42 @@ h1 {
     border: none;
     height: 5px;
     background-color: #3C3D37;
+  }
+  
+  .recent-post-list {
+    list-style: none; /* Remove default bullets */
+    padding-left: 50px;
+    margin: 10px 0;
+  }
+  
+  .recent-post-list li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 0px;
+  }
+  
+  .recent-post-list li::before {
+    content: "";
+    display: inline-block;
+    width: 16px; /* Adjust size */
+    height: 16px; /* Adjust size */
+    background-image: url('light.png'); /* Replace with your icon */
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 10px; /* Spacing between icon and text */
+  }
+  
+  .recent-post-link {
+    text-decoration: none;
+    font-size: 1.2em;
+    color: #CFC4B3;
+    transition: color 0.3s ease-in-out;
+  }
+  
+  .recent-post-link:hover {
+    color: #ECDFCC;
+    text-decoration: none;
   }
 
 /* Responsive Styles for Smaller Screens */
@@ -568,9 +604,6 @@ h1 {
 
 @media (max-width: 880px) {
 
-    .section-title{
-        display: none;
-    }
 
     .menu-toggle {
         display: flex;        /* Show hamburger menu only on smaller screens */
