--- a/styles.css
+++ b/styles.css
@@ -475,6 +475,14 @@ h1 {
     color: #ECDFCC;
 }
 
+  .blog-content h2{
+    font-size: 1.9em;
+    font-family: 'Volkhov',serif;
+    padding-left: 4vw;
+    padding-right: 3vw;
+    color: #CFC4B3;
+}
+
   .blog-content p{
     font-size: 1.2em;
     color: #CFC4B3;
@@ -482,7 +490,11 @@ h1 {
     padding-left: 3vw;
     padding-right: 3vw;
     }
-    
+
+.blog-content a{
+        color: #697565;
+}
+
   .break1{
     margin-top: 30px;
 }
@@ -528,6 +540,65 @@ h1 {
     color: #ECDFCC;
     text-decoration: none;
   }
+
+.propic {
+    margin-top:-1%;
+    margin-left: 2%;
+    width: 250px;
+    height: 250px;
+    position: relative;
+}
+
+.profile-pic{
+    border: 3px solid #CFC4B3;
+    overflow: hidden;
+    border-radius: 100%;
+}
+
+.propic::before {
+    content: '';
+    position: absolute;
+    width: 270px;
+    height: 270px;
+    top: -10px;
+    left: -10px;
+    background: #3C3D37;
+    opacity: 0.6;
+    border-radius: 100%;
+    z-index: 0; /* Behind the image */
+    filter: blur(10px);
+}
+
+.propic img {
+    width: 250px;
+    height: 250px;            /* Explicit height to ensure square */
+    object-fit: cover;        /* Ensures cropping to fit the square */
+    display: block;
+    position: relative;
+    z-index: 1;
+    transition: transform 0.7s ease;
+
+}
+
+.propic img:hover{
+    transform: scale(1.1);
+}
+
+.graph{
+    margin-top: 20px;
+    width: 99.5%;
+}
+
+.references p{
+    text-indent: -2.5%;
+}
+
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
 
 /* Responsive Styles for Smaller Screens */
 @media (max-width: 1133px){
