--- a/styles.css
+++ b/styles.css
@@ -524,9 +524,13 @@ h1 {
     width: 16px; /* Adjust size */
     height: 16px; /* Adjust size */
     background-image: url('light.png'); /* Replace with your icon */
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     margin-right: 10px; /* Spacing between icon and text */
+
+        /* Crucial additions */
+    flex-shrink: 0;
+    transform: none !important;  /* Prevent flipping */
   }
   
   .recent-post-link {
@@ -838,6 +842,10 @@ h1 {
         margin-top: 50px;
     }
 
+    .blog-content h2{
+        font-size: 1em;
+    }
+
     .page-title{
         font-size: 0.65em;
         margin-left: -20px;
@@ -906,6 +914,20 @@ h1 {
     .blog-content ul {
         font-size: 1em;
     }
+
+  .recent-post-list li {
+    font-size: 1em;
+    margin-bottom: 6px;
+  }
+
+  .recent-post-list li::before {
+    width: 14px;
+    height: 14px;
+  }
+
+  .recent-post-link {
+    font-size: 1em;
+  }
 
 /*    .search-bar input::placeholder{
         font-size: 0.6em;
