--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     src: url('/Users/miniduchandrawansa/Desktop/Blog/manrope/manrope-thin.otf');
 }
 
+.progressive-bg        { filter: blur(16px); transition: filter .6s ease; }
+.progressive-bg.loaded { filter: blur(0);    /* <-- no !important needed */ }
 
 .content-wrapper{
     overflow-x: hidden;
@@ -38,7 +40,6 @@ h1 {
     height: 100vh;
     top: 0;
     left: 0;
-    background: url('Landscape.jpeg') no-repeat center center;
     background-color: rgb(60, 61, 55,1);
     background-size: cover;
     display: flex;
@@ -48,6 +49,7 @@ h1 {
     color: #ECDFCC;
     font-family: 'Libre Baskerville', serif;
     text-align: center;
+    transition: filter 0.6s ease;
     z-index: 1000;
 }
 
@@ -337,7 +339,7 @@ h1 {
     margin-top: -10%;
     width: 100%;
     height: 130%; /* Extend height for parallax effect */
-    background: url('The\ Great\ Red\ Dragon\ 1.jpg') no-repeat center center;
+    transition: filter 0.6s ease;
     background-size: cover;
     z-index: -1; /* Keep it behind the text */
   }
