--- a/styles.css
+++ b/styles.css
@@ -467,7 +467,8 @@ h1 {
 
   .blog-content{
     color: #BDC8B1;
-    padding-left: 10px;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
     margin-top: 50px;
 }
   .blog-content h1{
@@ -671,6 +672,12 @@ h1 {
     }
 }
 
+@media (max-width: 1040px){
+    .introduction-passage p{
+        font-size: 1.1em;
+    }
+}
+
 @media (max-width: 1039px){
    
     .title{
@@ -806,6 +813,47 @@ h1 {
         width: 70px;
         height: 70px;
     }
+
+    .introduction-block{
+        flex-direction: column;
+        height: auto;
+        background-size: 275%;
+        padding-bottom: 5%;
+    }
+
+    .propic{
+        width: 225px;
+        height: 225px;
+        margin-left: 5%;
+    }
+
+    .propic::before{
+        width: 250px;
+        height: 250px;
+    }
+
+    .propic img{
+        width: 225px;
+        height: 225px;
+    }
+
+    .introduction-passage{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .introduction-passage .greeting-text{
+        font-size: 1.2em !important;
+    }
+
+    .introduction-passage p{
+        font-size: 1em;
+    }
+
+    .blog-content{
+        padding-right: 1.5%;
+        padding-left: 1.5%;
+  }
 }
 
 @media (max-width: 538px){
@@ -861,7 +909,7 @@ h1 {
     }
 
     .logo2{
-        margin-top:70px;
+        margin-top:75px;
         display: flex;
         width: 100px;
         height: auto;
@@ -964,6 +1012,30 @@ h1 {
 
   .recent-post-link {
     font-size: 1em;
+  }
+
+  .blog-content{
+    padding-right: 1.5%;
+    padding-left: 1.5%;
+  }
+
+  .propic{
+    margin-left: 10%;
+    width: 175px;
+    height: 175px;
+  }
+  .propic::before{
+    width: 190px;
+    height: 190px;
+  }
+
+  .propic img {
+    width: 175px;
+    height: 175px;
+  }
+
+  .introduction-block{
+    background-size: 300%;
   }
 
 /*    .search-bar input::placeholder{
