--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
 
 main{
     flex: 1;
+    padding-bottom: 10%;
 }
 
 h1 {
@@ -671,6 +672,8 @@ h1 {
     margin-top: -5%;
     border-radius: 5px;
     border: 2px solid rgba(207, 196, 179, 0.2) ; 
+    overflow: hidden;
+    position: relative;
 }
 
 .introduction-block::before {
@@ -680,7 +683,7 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(24, 28, 20, 0.6); /* Semi-transparent dark overlay */
+    background: rgba(24, 28, 20, 0.6);
     z-index: 0;
     pointer-events: none;
 }
@@ -953,6 +956,15 @@ h1 {
         padding-right: 1.5%;
         padding-left: 1.5%;
   }
+
+  .site-footer{
+    font-size: 0.8rem;
+  }
+
+  .site-footer p{
+    font-size: 0.85rem;
+  }
+
 }
 
 @media (max-width: 538px){
@@ -1136,6 +1148,22 @@ h1 {
   .introduction-block{
     background-size: 300%;
   }
+
+    .introduction-passage .greeting-text{
+    font-size: 1em !important;
+    }
+
+    .introduction-passage p{
+    font-size: 0.7em;
+    }
+  .site-footer{
+    font-size: 0.7rem;
+  }
+
+  .site-footer p{
+    font-size: 0.75rem;
+  }
+
 
 /*    .search-bar input::placeholder{
         font-size: 0.6em;
