--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,15 @@ h1 {
     font-family: 'Libre Baskerville', serif;
     text-align: center;
     z-index: 1000;
+    box-sizing: border-box;
+    padding: 0 5vw;
 }
 
+#loading-screen .loading-text,
+#loading-screen #quote-display{
+    max-width: 700px;
+    margin: 0 auto;
+}
 
 /* Overlay Effect */
 #loading-screen::before {
@@ -472,9 +479,9 @@ h1 {
     z-index: 2;
   }
 
-  .overlay-text h1:hover{
+  /* .overlay-text h1:hover{
     transform: scale(1.1);
-  }
+  } */
 
   .blog-content{
     color: #BDC8B1;
@@ -669,11 +676,11 @@ h1 {
     background-position: center 20%;
     width: 99%;
     height: 300px;
-    margin-top: -5%;
     border-radius: 5px;
     border: 2px solid rgba(207, 196, 179, 0.2) ; 
     overflow: hidden;
-    position: relative;
+    position: static;
+    transform: translateY(-50px);
 }
 
 .introduction-block::before {
